--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^5.13.10"
+    "mongoose": "^5.13.10",
+    "bson": "^4.1.2"
   }
 }
